tests/invalid/type/manual_ex023.pts
import Io;


function main() : void {
    int x;
    Io.printLine(x.toString()); // Erreur : E4001 (UNINITIALIZED_READ)
}